<resources>
    <string name="facebook_app_id">207760158182653</string>
    <string name="fb_login_protocol_scheme">fb207760158182653</string>
    <string name="app_name">Trueque</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_users">Publicaciones</string>
    <string name="sig_in">Ingresar</string>
    <string name="hint_password">Ingrese su contraseña</string>
    <string name="hint_user_name">Correo electronico</string>
    <string name="check_in">¿No tienes una cuenta?</string>
    <string name="other_session">Iniciar sesión con:</string>
    <string name="form_registro">REGISTRO</string>
    <string name="names">Nombres</string>
    <string name="hint_name">Digite su nombre</string>
    <string name="Names">Digite su combre completo</string>
    <string name="Names1">Digite su nombre completo</string>
    <string name="Last_names">DIgite su nombre completo</string>
    <string name="city">Ciudad</string>
    <string name="hint_city">Digite su ciudad</string>
    <string name="city1">Digite su ciudad</string>
    <string name="hint_phone">Digite su telefono</string>
    <string name="telephone">Digite su telefono</string>
    <string name="email">Email</string>
    <string name="hint_email">Digite su Email</string>
    <string name="email_Adress">Digite su Email</string>
    <string name="password">Contraseña</string>
    <string name="password1">Digite su conraseña</string>
    <string name="clean">limpiar</string>
    <string name="save">guardar</string>
    <string name="phone">Telefono</string>
    <string name="more_info">Más información</string>
    <string name="addproduct">Agregar nuevos productos</string>
    <string name="av_products">Productos disponibles</string>
    <string name="addProduct">Agregar products</string>
    <string name="info_new_product">Rellena los siguientes campos para agregar un nuevo producto</string>
    <string name="btn_back">Regresar</string>
    <string name="noPhoneUser">Teléfono</string>
    <string name="btnSave">Guardar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="takePhoto">Tomar foto del producto</string>
    <string name="titulo_publicacion">Escritorio de madera</string>
    <string name="descritption_1">Escritorio En perfecto estado, deseo intercambairlo por una computadora o una consola de videojuegos, cuenta con 2 cajones muy amplios.</string>
    <string name="contactar">contactar</string>

    <!-->Activity_Checkin-->
    <string name="Check_Name">Nombre:</string>
    <string name="Check_City">Ciudad:</string>
    <string name="Check_Telephone">Teléfono:</string>
    <string name="Check_Email">Email:</string>
    <string name="Check_Password">Contraseña:</string>
    <string name="Check_RepeatPassword">Repetir Contraseña:</string>
    <string name="btnRegister">Registrarse</string>

    <string name="Check_Edit_Name_hint">Digite su nombre completo</string>
    <string name="Check_Edit_City_hint">Digite su ciudad</string>
    <string name="Check_Edit_Telephone_hint">Digite su teléfono</string>
    <string name="Check_Edit_Email_hint">Digite su email</string>
    <string name="Check_Edit_Password_hint">Digite su Contraseña</string>
    <string name="Check_Edit_RepeatPassword_hint">Repita su contraseña</string>

    <!-- string del login-->
    <string name="NoInicio">No pudo iniciar sesión, intente nuevamente (Revise el correo y la contraseña)</string>
    <string name="ok_no_inicio">Ententido</string>
    <string name="cerrar_sessi_n">Cerrar sessión</string>
    <string name="iniciargoogle">Iniciar sesión con Google</string>
    <string name="title_activity_profileperson">profileperson</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--Mis Datos-->
    <string name="uis_Dato">UID</string>
    <string name="Nombre_Dato">Nombre</string>
    <string name="Password_Dato">Contraseña</string>
    <string name="Email_Dato">Correo</string>
    <string name="Phone_Dato">Telefono</string>
    <string name="ubication_dato">Ubicación</string>
    <string name="PerfilTittle">Mis datos</string>
    <string name="actualizardatos">Actualizar información</string>
    <string name="actualizarpass">Actualizar contraseña</string>


</resources>