<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".CheckIn">

    <LinearLayout
        android:id="@+id/Linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:layout_editor_absoluteX="9dp"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="130dp"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/Registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:paddingBottom="20dp"
                android:text="@string/form_registro"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="53dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Check_Email"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/bg_product"
                android:hint="@string/Check_Edit_Email_hint"
                android:padding="10dp"
                android:textColorHint="@color/ColorHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Check_Password"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <EditText
                android:id="@+id/etPass"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/bg_product"
                android:hint="@string/Check_Edit_Password_hint"
                android:padding="10dp"
                android:textColorHint="@color/ColorHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Check_RepeatPassword"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <EditText
                android:id="@+id/etPass2"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/bg_product"
                android:hint="@string/Check_Edit_RepeatPassword_hint"
                android:padding="10dp"
                android:textColorHint="@color/ColorHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Check_Name"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/bg_product"
                android:hint="@string/Check_Edit_Name_hint"
                android:padding="10dp"
                android:textColorHint="@color/ColorHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Check_Telephone"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/bg_product"
                android:hint="@string/Check_Edit_Telephone_hint"
                android:padding="10dp"
                android:textColorHint="@color/ColorHint" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="goToLogin"
        android:text="@string/btnCancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/btnRegister"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button1" />



</androidx.constraintlayout.widget.ConstraintLayout>